--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-spring": "^9.2.3",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
